RESOLVED FIXED227380
REGRESSION: (r279244) [ Mac ] http/tests/workers/service/postmessage-after-terminate.https.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=227380
Summary REGRESSION: (r279244) [ Mac ] http/tests/workers/service/postmessage-after-te...
Truitt Savell
Reported 2021-06-24 16:50:35 PDT
http/tests/workers/service/postmessage-after-terminate.https.html This test appears to have begun timing out with the changes in https://trac.webkit.org/changeset/279244/webkit according to history History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fworkers%2Fservice%2Fpostmessage-after-terminate.https.html
Attachments
Radar WebKit Bug Importer
Comment 1 2021-06-24 16:51:00 PDT
Chris Dumez
Comment 2 2021-06-24 17:01:34 PDT
Weird that a logging change caused this but the bots seem sure. I must have made a silly mistake somewhere. Investigating..
Chris Dumez
Comment 3 2021-06-24 17:34:08 PDT
Note You need to log in before you can comment on or make changes to this bug.